# UAF-Plankline

./: .gitignore  0-check-imports.py  Makefile  Makefile.in  R postprocessing pull.R  README  aclocal.m4  cgrb_classification.sh  cgrb_segmentation.sh  classification.ipynb  classification.old.py  classification.py  cleanup.py  config.ini  config.status  configure  configure.ac  configure.ac~  configure~  copyright  default.ini  default.old.ini  hannahNotes  isiis_seg_ff  local_classification.sh  local_segmentation.sh  logging.ini  measure_parallel.py  osu_test_config.ini  plankline.py  plankton_config.ini  plankton_config2.ini  plankton_config3.ini  plankton_config4.ini  pull_all.py  readme.md  segment  segmentation testing.ipynb  segmentation.ipynb  segmentation.py  (+7 more)
Notes/: General Setup.md  Kelly Linux Notes.md  Kelly Linux Notes.txt  Kelly Plankline Notes.txt  Linux Setup.md  Linux.md  Morphocluster Setup.md  Morphocluster.md  Plankline Setup.md  Plankline.md  example.ini
autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.3
docs/: Doxyfile  api.md  cgrb_example.ini  config.ini  page-md_readme.md  xsede_example.ini
docs/html/: classification_8py_source.html  cleanup_8py_source.html  dir_a086c7d0bd7e3b79fbbb479a8a45655a.html  files.html  files_dup.js  graph_legend.html  index.html  md__home_thomas__github__u_a_f__plankline__notes__linux__setup.html  md__home_thomas__github__u_a_f__plankline__notes__morphocluster__setup.html  md__home_thomas__github__u_a_f__plankline__notes__plankline.html  md__home_thomas__github__u_a_f__plankline__notes__plankline__setup.html  md__home_thomas__github__u_a_f__plankline_readme.html  md_readme.html  namespaceclassification.html  namespacecleanup.html  namespacemembers.html  namespacemembers_func.html  namespacemembers_vars.html  namespacepull__all.html  namespaces.html  namespaces_dup.js  namespacesegmentation.html  namespacetrain.html  navtreedata.js  navtreeindex0.js  pages.html  pull__all_8py_source.html  segmentation_8py_source.html  train_8py_source.html
docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  namespaces_0.js  namespaces_1.js  namespaces_2.js  namespaces_3.js  pages_0.js  pages_1.js  pages_2.js  pages_3.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js
docs/latex/: md__home_thomas__github__u_a_f__plankline__notes__linux__setup.tex  md__home_thomas__github__u_a_f__plankline__notes__morphocluster__setup.tex  md__home_thomas__github__u_a_f__plankline__notes__plankline.tex  md__home_thomas__github__u_a_f__plankline__notes__plankline__setup.tex  md__home_thomas__github__u_a_f__plankline_readme.tex  namespaceclassification.tex  namespacecleanup.tex  namespacepull__all.tex  namespaces.tex  namespacesegmentation.tex  namespacetrain.tex  refman.aux  refman.idx  refman.ilg  refman.ind  refman.out  refman.tex  refman.toc
docs/xml/: classification_8py.xml  cleanup_8py.xml  index.xml  md_readme.xml  namespaceclassification.xml  namespacecleanup.xml  namespacepull__all.xml  namespacesegmentation.xml  namespacetrain.xml  pull__all_8py.xml  readme_8md.xml  segmentation_8py.xml  train_8py.xml
old/: classification.py  train.py
scripts/: cgrb_train_scnn.sh  pull_images.py  xsede_train_scnn.sh
